--- a/themes/aplos/layouts/posts/single.html
+++ b/themes/aplos/layouts/posts/single.html
@@ -1,10 +1,18 @@
 {{ define "main" }}
   <section class="section is-small">
 
-    <div class="hero is-bold has-text-centered-left">
+    <div class="hero is-bold has-text-centered-left is-size-1">
       <div class="hero-body">
           <div class="content container is-size-4">
              <h1 class="title is-1">{{ .Title }}</h1>
+          </div>
+      </div>
+    </div>
+
+    <div class="hero is-bold has-text-centered-left is-size-1">
+      <div class="hero-body">
+          <div class="content container is-size-4">
+            {{ partial "tags.html" . }}
           </div>
       </div>
     </div>
@@ -43,6 +51,10 @@
       </div>
     </section>
 
+    <div class="container is-bold has-text-centered">
+      <hr>
+    </div>
+
     <div class="container is-widescreen is-size-4">
       <nav class="level">
 
@@ -76,6 +88,7 @@
     <div class="container is-bold has-text-centered">
       <hr>
     </div>
+
 
   </section>
 {{ end }}
