change navbar links box

--- a/themes/aplos/layouts/posts/single.html
+++ b/themes/aplos/layouts/posts/single.html
@@ -9,13 +9,10 @@
       </div>
     </div>
 
-    <div class="hero is-bold has-text-centered-left is-size-1">
-      <div class="hero-body">
-          <div class="content container is-size-4">
-            {{ partial "tags.html" . }}
-          </div>
-      </div>
+    <div class="container is-bold has-text-left">
+    {{ partial "tags.html" . }}
     </div>
+
 
     <div class="container is-bold has-text-centered">
       <hr>
