--- a/themes/aplos/layouts/partials/navbar.html
+++ b/themes/aplos/layouts/partials/navbar.html
@@ -1,8 +1,12 @@
 <div class="columns is-mobile is-multiline is-centered">
   <div class="column is-narrow">
-    <a href="/posts" class="subtitle is-4">Posts</a>
+    <div class="box subtitle is-3">
+    <a href="/posts">Posts</a>
+    </div>
   </div>
   <div class="column is-narrow">
-    <a href="/about" class="subtitle is-4">About</a>
+    <div class="box subtitle is-3">
+    <a href="/about">About</a>
+    </div>
   </div>
 </div>
