--- a/themes/aplos/layouts/taxonomy/tag.html
+++ b/themes/aplos/layouts/taxonomy/tag.html
@@ -2,6 +2,7 @@
   <section class="section is-small">
 
     <section class="hero is-default">
+      <div class="hero-body">
         <div class="content container is-size-4 is-sans-serif">
 
           <div class="tile is-ancestor">
@@ -35,6 +36,7 @@
             </div>
 
           </div>
+        </div>
       </div>
 
     </section>
