update sizes in summary

--- a/themes/aplos/layouts/posts/summary.html
+++ b/themes/aplos/layouts/posts/summary.html
@@ -1,7 +1,7 @@
 <div class="columns is-left">
   <div class="column is-narrow is-centered is-vcentered">
-    <div class="subtitle is-3 mb-0 mt-3">
-        <time datetime="{{.Date.Format "2006-01-02T15:04:05Z07:00"}}" pubdate>
+    <div class="subtitle is-4 mb-0 mt-3">
+        <time datetime="{{.Date.Format "2006-01-02T15:04:05Z07:00"}}">
           <span class='month'>{{ .Date.Format "Jan" }}</span>
           <span class='day'>{{ .Date.Format "_2" }}</span>
           <span class='year'>{{ .Date.Format "2006" }}</span>
@@ -9,10 +9,10 @@
     </div>
   </div>
   <div class="column">
-    <div class="title is-1 mb-0 mt-3"><a href="{{.RelPermalink}}">{{ .LinkTitle }}</a></div>
-    <div class="content">
-      {{ partial "tags.html" . }}
-    </div>
+    <div class="title is-2 mb-0 mt-3"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></div>
+      <div class="content">
+        {{ partial "tags.html" . }}
+      </div>
     <hr>
   </div>
 </div>
