--- a/themes/aplos/layouts/partials/head.html
+++ b/themes/aplos/layouts/partials/head.html
@@ -8,6 +8,8 @@
 
   <link href='https://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.cdnfonts.com/css/narita-monospace" rel="stylesheet">
+
 
   <link href="/css/mystyles.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/style.css" media="screen, projection" rel="stylesheet" type="text/css">
